fix overflow

--- a/1dmoments.css
+++ b/1dmoments.css
@@ -15,6 +15,11 @@
 
 body {
   background-color: var(--fourth-color);
+  overflow: hidden;
+}
+
+.wrapper {
+  overflow: hidden;
 }
 
 nav {
@@ -82,8 +87,8 @@ nav {
 }
 
 @media screen and (max-width: 768px) {
-  body {
-    overflow-x: hidden;
+  .wrapper {
+    overflow: hidden;
   }
   .logo {
     width: 8rem;
