--- a/contacts/contact.css
+++ b/contacts/contact.css
@@ -22,6 +22,10 @@ body {
   height: 100%;
 }
 
+.wrapper {
+  overflow: hidden;
+}
+
 nav {
   display: flex;
   justify-content: space-around;
